20220517 신고관리 api 연결, DB 수정으로 인한 수정

--- a/main/detail.html
+++ b/main/detail.html
@@ -92,7 +92,9 @@
               data-bs-ride="carousel"
               style="width: 85%; border: 1px solid black"
             >
-              <div id="carouselInner" class="carousel-inner"></div>
+              <div id="carouselInner" class="carousel-inner">
+                
+              </div>
               <button
                 class="carousel-control-prev"
                 type="button"
