--- a/member/login.html
+++ b/member/login.html
@@ -149,7 +149,7 @@
             }
           })
           .catch(function (error) {
-            console.log(error);
+            alert('아이디 또는 비밀번호가 일치하지 않습니다.');
           });
       });
     </script>
