--- a/member/login.html
+++ b/member/login.html
@@ -127,7 +127,10 @@
             password: password,
           }),
         })
-          .then((response) => response.json())
+          .then((response) => {
+            console.log(response.status);
+            return response.json();
+          })
           .then((result) => {
             const data = result.data;
             console.log(result);
@@ -136,21 +139,15 @@
             localStorage.setItem('memberId', data.memberId);
             console.log(data.accessToken);
 
-            if (data.status !== 401) {
-              if (id == 'admin') {
-                location.href = '/admin/member.html';
-                alert('관리자입니다.');
-              } else {
-                location.href = '/main/search.html';
-                alert('회원입니다.');
-              }
+            if (data.state == 'ROLE_ADMIN') {
+              location.href = '/admin/member.html';
+              alert('관리자입니다.');
             } else {
-              alert('아이디 또는 비밀번호가 일치하지 않습니다.');
+              location.href = '/main/search.html';
+              alert('회원입니다.');
             }
           })
-          .catch(function (error) {
-            alert('아이디 또는 비밀번호가 일치하지 않습니다.');
-          });
+          .catch(function (error) {});
       });
     </script>
   </body>
