20220518 회원 관리 jquery 클릭 이벤트(동적) 수정

--- a/admin/member.html
+++ b/admin/member.html
@@ -10,12 +10,14 @@
     <meta name="description" content="관리자 페이지" />
     <meta name="author" content="이성호" />
     <title>관리자 페이지</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" defer></script>
-    <script src="/admin/js/memberDeleteStop.js" defer></script>
+    <script defer src="/admin/js/memberSelect.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     
-    <script src="/admin/js/memberSelect.js"></script>
-    <script src="/admin/js/logout.js" async></script>
-    <script src="/admin/js/memberChange.js" defer></script>
+   
+    <script src="/admin/js/memberDeleteStop.js"></script>
+
+    <script async src="/admin/js/logout.js"></script>
+    <script async src="/admin/js/memberChange.js"></script>
     
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css"
@@ -164,5 +166,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/datatables-simple-demo.js"></script>
+
   </body>
 </html>
