20220521 채팅방 생성 api 연결

--- a/main/detail.html
+++ b/main/detail.html
@@ -9,6 +9,7 @@
     <script src="detailProduct.js"></script>
     <script src="login.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="roomCreate.js" defer></script>
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
   </head>
@@ -141,7 +142,7 @@
                 >
                   입찰하기
                 </button>
-                <button type="button" class="btn btn-secondary">
+                <button id="roomCreate" type="button" class="btn btn-secondary">
                   문의하기
                 </button>
                 
