--- a/chat/chat.html
+++ b/chat/chat.html
@@ -10,6 +10,7 @@
     <script src="js/socket.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="/main/login.js" defer></script>
+    <script src="js/roomSelect.js"></script>
     <style>
       body {
         margin-top: 20px;
@@ -136,42 +137,12 @@
 
         <div class="card">
           <div class="row g-0">
-            <div class="col-12 col-lg-5 col-xl-3 border-right">
-              <div class="px-4 d-none d-md-block">
-                <div class="d-flex align-items-center">
-                  <div class="flex-grow-1">
-                    <input
-                      type="text"
-                      class="form-control my-3"
-                      placeholder="Search..."
-                    />
-                  </div>
-                </div>
-              </div>
+            <!-- 채팅방 목록 내용 -->
+            <div
+              id="chatRoomList"
+              class="col-12 col-lg-5 col-xl-3 border-right"
+            ></div>
 
-              <a
-                href="#"
-                class="list-group-item list-group-item-action border-0"
-              >
-                <div class="d-flex align-items-start">
-                  <img
-                    src="https://bootdey.com/img/Content/avatar/avatar3.png"
-                    class="rounded-circle mr-1"
-                    alt="Sharon Lessman"
-                    width="40"
-                    height="40"
-                  />
-                  <div class="flex-grow-1 ml-3">
-                    Sharon Lessman
-                    <div class="small">
-                      <span class="fas fa-circle chat-online"></span> Online
-                    </div>
-                  </div>
-                </div>
-              </a>
-
-              <hr class="d-block d-lg-none mt-1 mb-0" />
-            </div>
             <div class="col-12 col-lg-7 col-xl-9">
               <div class="py-2 px-4 border-bottom d-none d-lg-block">
                 <div class="d-flex align-items-center py-1">
