20220521 채팅(전송) api 연결

--- a/main/register.html
+++ b/main/register.html
@@ -15,6 +15,7 @@
     <script src="addFile.js"></script>
     <script src="category.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="socketConnect.js" defer></script>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
 
@@ -313,5 +314,7 @@
           });
       });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   </body>
 </html>
