--- a/main/search.html
+++ b/main/search.html
@@ -19,6 +19,7 @@
     <script src="category.js"></script>
     <script src="productList.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="socketConnect.js" defer></script>
   </head>
   <body>
     <!-- Navigation-->
@@ -137,6 +138,7 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   </body>
 </html>
