--- a/main/detail.html
+++ b/main/detail.html
@@ -10,6 +10,8 @@
     <script src="login.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="roomCreate.js" defer></script>
+    <script src="socketConnect.js" defer></script>
+
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
   </head>
@@ -287,5 +289,7 @@
         
       })
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   </body>
 </html>
