--- a/main/mypage.html
+++ b/main/mypage.html
@@ -14,6 +14,7 @@
     <script src="bidModal.js"></script>
     <script src="reviewWrite.js"></script>
     <script src="selectReview.js" defer></script>
+    <script src="socketConnect.js" defer></script>
 
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
@@ -467,5 +468,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   </body>
 </html>
