--- a/test.html
+++ b/test.html
@@ -2,67 +2,420 @@
 <html>
   <head>
     <title>Hello WebSocket</title>
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/main.css" rel="stylesheet" />
-    <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
-    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/test.js"></script>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      body {
+        background-color: #74ebd5;
+        background-image: linear-gradient(90deg, #74ebd5 0%, #9face6 100%);
+
+        min-height: 100vh;
+      }
+
+      ::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      ::-webkit-scrollbar-track {
+        width: 5px;
+        background: #f5f5f5;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        width: 1em;
+        background-color: #ddd;
+        outline: 1px solid slategrey;
+        border-radius: 1rem;
+      }
+
+      .text-small {
+        font-size: 0.9rem;
+      }
+
+      .messages-box,
+      .chat-box {
+        height: 510px;
+        overflow-y: scroll;
+      }
+
+      .rounded-lg {
+        border-radius: 0.5rem;
+      }
+
+      input::placeholder {
+        font-size: 0.9rem;
+        color: #999;
+      }
+    </style>
   </head>
   <body>
-    <noscript
-      ><h2 style="color: #ff0000">
-        Seems your browser doesn't support Javascript! Websocket relies on
-        Javascript being enabled. Please enable Javascript and reload this page!
-      </h2></noscript
-    >
-    <div id="main-content" class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <form class="form-inline">
-            <div class="form-group">
-              <label for="connect">WebSocket connection:</label>
-              <button id="connect" class="btn btn-default" type="submit">
-                Connect
-              </button>
-              <button
-                id="disconnect"
-                class="btn btn-default"
-                type="submit"
-                disabled="disabled"
-              >
-                Disconnect
-              </button>
+    <div class="container py-5 px-4">
+      <!-- For demo purpose-->
+      <header class="text-center">
+        <h1 class="display-4 text-white">Bootstrap Chat</h1>
+        <p class="text-white lead mb-0">
+          An elegant chat widget compatible with Bootstrap 4
+        </p>
+        <p class="text-white lead mb-4">
+          Snippet by
+          <a href="https://bootstrapious.com" class="text-white">
+            <u>Bootstrapious</u></a
+          >
+        </p>
+      </header>
+
+      <div class="row rounded-lg overflow-hidden shadow">
+        <!-- Users box-->
+        <div class="col-5 px-0">
+          <div class="bg-white">
+            <div class="bg-gray px-4 py-2 bg-light">
+              <p class="h5 mb-0 py-1">Recent</p>
             </div>
-          </form>
+
+            <div class="messages-box">
+              <div class="list-group rounded-0">
+                <a
+                  class="list-group-item list-group-item-action active text-white rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">25 Dec</small>
+                      </div>
+                      <p class="font-italic mb-0 text-small">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">14 Dec</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        Lorem ipsum dolor sit amet, consectetur. incididunt ut
+                        labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">9 Nov</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">18 Oct</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">17 Oct</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">2 Sep</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        Quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-1"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">30 Aug</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+
+                <a
+                  href="#"
+                  class="list-group-item list-group-item-action list-group-item-light rounded-0"
+                >
+                  <div class="media">
+                    <img
+                      src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                      alt="user"
+                      width="50"
+                      class="rounded-circle"
+                    />
+                    <div class="media-body ml-4">
+                      <div
+                        class="d-flex align-items-center justify-content-between mb-3"
+                      >
+                        <h6 class="mb-0">Jason Doe</h6>
+                        <small class="small font-weight-bold">21 Aug</small>
+                      </div>
+                      <p class="font-italic text-muted mb-0 text-small">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit, sed do eiusmod tempor incididunt ut labore.
+                      </p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
-          <form class="form-inline">
-            <div class="form-group">
-              <label for="name">What is your name?</label>
+        <!-- Chat Box-->
+        <div class="col-7 px-0">
+          <div class="px-4 py-5 chat-box bg-white">
+            <!-- Sender Message-->
+            <div class="media w-50 mb-3">
+              <img
+                src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                alt="user"
+                width="50"
+                class="rounded-circle"
+              />
+              <div class="media-body ml-3">
+                <div class="bg-light rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-muted">
+                    Test which is a new approach all solutions
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+
+            <!-- Reciever Message-->
+            <div class="media w-50 ml-auto mb-3">
+              <div class="media-body">
+                <div class="bg-primary rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-white">
+                    Test which is a new approach to have all solutions
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+
+            <!-- Sender Message-->
+            <div class="media w-50 mb-3">
+              <img
+                src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                alt="user"
+                width="50"
+                class="rounded-circle"
+              />
+              <div class="media-body ml-3">
+                <div class="bg-light rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-muted">
+                    Test, which is a new approach to have
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+
+            <!-- Reciever Message-->
+            <div class="media w-50 ml-auto mb-3">
+              <div class="media-body">
+                <div class="bg-primary rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-white">
+                    Apollo University, Delhi, India Test
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+
+            <!-- Sender Message-->
+            <div class="media w-50 mb-3">
+              <img
+                src="https://bootstrapious.com/i/snippets/sn-chat/avatar.svg"
+                alt="user"
+                width="50"
+                class="rounded-circle"
+              />
+              <div class="media-body ml-3">
+                <div class="bg-light rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-muted">
+                    Test, which is a new approach
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+
+            <!-- Reciever Message-->
+            <div class="media w-50 ml-auto mb-3">
+              <div class="media-body">
+                <div class="bg-primary rounded py-2 px-3 mb-2">
+                  <p class="text-small mb-0 text-white">
+                    Apollo University, Delhi, India Test
+                  </p>
+                </div>
+                <p class="small text-muted">12:00 PM | Aug 13</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Typing area -->
+          <form action="#" class="bg-light">
+            <div class="input-group">
               <input
                 type="text"
-                id="name"
-                class="form-control"
-                placeholder="Your name here..."
+                placeholder="Type a message"
+                aria-describedby="button-addon2"
+                class="form-control rounded-0 border-0 py-4 bg-light"
               />
+              <div class="input-group-append">
+                <button id="button-addon2" type="submit" class="btn btn-link">
+                  <i class="fa fa-paper-plane"></i>
+                </button>
+              </div>
             </div>
-            <button id="send" class="btn btn-default" type="submit">
-              Send
-            </button>
           </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <table id="conversation" class="table table-striped">
-            <thead>
-              <tr>
-                <th>Greetings</th>
-              </tr>
-            </thead>
-            <tbody id="greetings"></tbody>
-          </table>
         </div>
       </div>
     </div>
