--- a/main/mypage.html
+++ b/main/mypage.html
@@ -81,7 +81,9 @@
                 >마이페이지</a
               >
             </li>
-            <li><a href="#" class="nav-link px-3 link-dark">TALK!</a></li>
+            <li>
+              <a href="/chat/chat.html" class="nav-link px-3 link-dark">채팅</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -415,6 +417,9 @@
                 <table id="currentBidModal" class="tb-w100 text-center"></table>
               </div>
               <div class="modal-footer" style="justify-content: center">
+                <button id="successChat" type="button" class="btn btn-primary">
+                  채팅하기
+                </button>
                 <button id="successBid" type="button" class="btn btn-primary">
                   낙찰하기
                 </button>
