--- a/main/notify.html
+++ b/main/notify.html
@@ -77,7 +77,8 @@
                 >마이페이지</a
               >
             </li>
-            <li><a href="#" class="nav-link px-3 link-dark">TALK!</a></li>
+            <li>              <a href="/chat/chat.html" class="nav-link px-3 link-dark">채팅</a>
+            </li>
           </ul>
         </div>
       </div>
