--- a/main/search.html
+++ b/main/search.html
@@ -15,6 +15,7 @@
 
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/css/styles.css" rel="stylesheet" />
+
     <script src="login.js" defer></script>
     <script src="category.js"></script>
     <script src="productList.js" defer></script>
@@ -27,6 +28,35 @@
       <div class="container px-5 px-lg-5">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <div class="dropdown">
+              <button
+                class="dropdowBtn dropdown-toggle"
+                data-bs-toggle="dropdown"
+              >
+                <i class="fa-solid fa-bell"></i>
+              </button>
+              <ul class="dropdown-menu">
+                <li class="item_row">
+                  <div class="item">
+                    <span class="NotificationMsg">상품이 낙찰되었습니다.</span>
+                    <button class="item_delete">
+                      <i class="fa-solid fa-trash-can"></i>
+                    </button>
+                  </div>
+                  <div class="item_divider"></div>
+                </li>
+                <li class="item_row">
+                  <div class="item">
+                    <span class="NotificationMsg">상품이 낙찰되었습니다.</span>
+                    <button class="item_delete">
+                      <i class="fa-solid fa-trash-can"></i>
+                    </button>
+                  </div>
+                  <div class="item_divider"></div>
+                </li>
+              </ul>
+            </div>
+
             <li class="nav-item">
               <a id="login" class="nav-link" href="/member/login.html"
                 >로그인</a
@@ -44,6 +74,7 @@
         </div>
       </div>
     </nav>
+
     <!-- Header-->
     <header class="p-3 mb-3 border-bottom">
       <div class="container">
@@ -137,8 +168,16 @@
       </div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/0a28c38607.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
