20220523 알림(전송) api 연결

--- a/main/search.html
+++ b/main/search.html
@@ -21,6 +21,7 @@
     <script src="productList.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="socketConnect.js" defer></script>
+    <script src="notification.js"></script>
   </head>
   <body>
     <!-- Navigation-->
