--- a/main/mypage.html
+++ b/main/mypage.html
@@ -15,6 +15,7 @@
     <script src="reviewWrite.js"></script>
     <script src="selectReview.js" defer></script>
     <script src="socketConnect.js" defer></script>
+    <script src="notification.js"></script>
 
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
@@ -25,6 +26,17 @@
       <div class="container px-5 px-lg-5">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <div class="dropdown">
+              <button
+                class="dropdowBtn dropdown-toggle"
+                data-bs-toggle="dropdown"
+              >
+                <i class="fa-solid fa-bell"></i>
+              </button>
+              <ul class="dropdown-menu">
+                <li class="item_row"></li>
+              </ul>
+            </div>
             <li class="nav-item">
               <a id="login" class="nav-link" href="/member/login.html"
                 >로그인</a
@@ -475,5 +487,9 @@
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/0a28c38607.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
