--- a/main/register.html
+++ b/main/register.html
@@ -16,6 +16,8 @@
     <script src="category.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="socketConnect.js" defer></script>
+    <script src="notification.js"></script>
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
 
@@ -28,6 +30,17 @@
       <div class="container px-5 px-lg-5">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <div class="dropdown">
+              <button
+                class="dropdowBtn dropdown-toggle"
+                data-bs-toggle="dropdown"
+              >
+                <i class="fa-solid fa-bell"></i>
+              </button>
+              <ul class="dropdown-menu">
+                <li class="item_row"></li>
+              </ul>
+            </div>
             <li class="nav-item">
               <a id="login" class="nav-link" href="/member/login.html"
                 >로그인</a
@@ -318,5 +331,14 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/0a28c38607.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
