--- a/main/search.html
+++ b/main/search.html
@@ -37,24 +37,7 @@
                 <i class="fa-solid fa-bell"></i>
               </button>
               <ul class="dropdown-menu">
-                <li class="item_row">
-                  <div class="item">
-                    <span class="NotificationMsg">상품이 낙찰되었습니다.</span>
-                    <button class="item_delete">
-                      <i class="fa-solid fa-trash-can"></i>
-                    </button>
-                  </div>
-                  <div class="item_divider"></div>
-                </li>
-                <li class="item_row">
-                  <div class="item">
-                    <span class="NotificationMsg">상품이 낙찰되었습니다.</span>
-                    <button class="item_delete">
-                      <i class="fa-solid fa-trash-can"></i>
-                    </button>
-                  </div>
-                  <div class="item_divider"></div>
-                </li>
+                <li class="item_row"></li>
               </ul>
             </div>
 
