--- a/main/notify.html
+++ b/main/notify.html
@@ -30,9 +30,7 @@
               >
                 <i class="fa-solid fa-bell"></i>
               </button>
-              <ul class="dropdown-menu">
-                <li class="item_row"></li>
-              </ul>
+              <ul class="dropdown-menu"></ul>
             </div>
             <li class="nav-item">
               <a id="login" class="nav-link" href="/member/login.html"
