--- a/main/mypage.html
+++ b/main/mypage.html
@@ -337,7 +337,7 @@
                 </form>
               </div>
               <div class="modal-footer">
-                <button id="registration" type="button" class="btn btn-primary">
+                <button id="registerBtn" type="button" class="btn btn-primary">
                   등록
                 </button>
                 <button
