20220527 로그인 에러 처리, 회원가입 비밀번호 확인, 상품 목록 조회 검색기능 추가

--- a/main/register.html
+++ b/main/register.html
@@ -76,7 +76,7 @@
           </a>
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-40 ms-5">
             <input
-              type="search"
+              type="text"
               class="form-control"
               placeholder="Search..."
               aria-label="Search"
