--- a/main/search.html
+++ b/main/search.html
@@ -75,14 +75,15 @@
             />
             <span class="fs-4">Inha Auction</span>
           </a>
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-40 ms-5">
+          <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-40 ms-5">
             <input
+              id="search"
               type="search"
               class="form-control"
               placeholder="Search..."
               aria-label="Search"
             />
-          </form>
+          </div>
           <ul
             class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0 me-lg-4 ms-6"
           >
