--- a/member/login.html
+++ b/member/login.html
@@ -128,7 +128,9 @@
           }),
         })
           .then((response) => {
-            console.log(response.status);
+            if (response.status == 401) {
+              alert('아이디 또는 비밀번호가 일치하지 않습니다.');
+            }
             return response.json();
           })
           .then((result) => {
