20220530 카테고리 UI 수정

--- a/main/detail.html
+++ b/main/detail.html
@@ -13,6 +13,7 @@
     <script src="socketConnect.js" defer></script>
     <script src="detailBid.js" defer></script>
     <script src="notification.js"></script>
+ 
     <!--웹 로고-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
   </head>
@@ -66,7 +67,8 @@
               width="40"
               height="40"
             />
-            <span class="fs-4">Inha Auction</span>
+            <span id="inhaAuction" class="fs-4">Inha Auction</span>
+
           </a>
           
           <ul
