--- a/main/mypage.html
+++ b/main/mypage.html
@@ -68,7 +68,7 @@
               width="40"
               height="40"
             />
-            <span class="fs-4">Inha Auction</span>
+            <span id="inhaAuction" class="fs-4">Inha Auction</span>
           </a>
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-40 ms-5">
             <input
