--- a/main/search.html
+++ b/main/search.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container px-5 px-lg-5">
+      <div class="container px-6">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <div class="dropdown">
@@ -38,7 +38,6 @@
               </button>
               <ul class="dropdown-menu"></ul>
             </div>
-
             <li class="nav-item">
               <a id="login" class="nav-link" href="/member/login.html"
                 >로그인</a
@@ -73,13 +72,23 @@
               width="40"
               height="40"
             />
-            <span class="fs-4">Inha Auction</span>
+            <span id="inhaAuction" class="fs-4">Inha Auction</span>
           </a>
-          <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-40 ms-5">
+
+          <input
+            id="categoryPath"
+            class="form-control text-center ms-auto"
+            style="width: 12%; background-color: white"
+            type="text"
+            value="전체"
+            readonly
+          />
+          <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-5 w-35 ms-1">
             <input
               id="search"
               type="search"
               class="form-control"
+              style="width: 100%"
               placeholder="Search..."
               aria-label="Search"
             />
@@ -106,7 +115,7 @@
     </header>
     <!-- 카테고리 -->
     <section class="py-3">
-      <div class="row mx-8 py-3">
+      <div id="category" class="row mx-8 py-3">
         <div class="col-md-4 text-center">
           <b>대분류</b>
           <ul id="parent" class="list-group pb-5">
