--- a/admin/report.html
+++ b/admin/report.html
@@ -19,10 +19,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css"
       rel="stylesheet"
-    />
+    /> -->
     <link href="css/styles.css" rel="stylesheet" />
     
   </head>
@@ -66,11 +66,12 @@
           <div class="sb-sidenav-menu">
             <div class="nav">
               <a class="nav-link" href="member.html">
-                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                <div class="sb-nav-link-icon">
+                  <i style="width: 20px" class="fa-solid fa-user-gear"></i></div>
                 회원관리
               </a>
               <a class="nav-link" href="report.html">
-                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                <div class="sb-nav-link-icon"><i style="width: 20px" class="fa-solid fa-skull-crossbones"></i></div>
                 신고관리
               </a>
             </div>
@@ -78,10 +79,10 @@
       </div>
       <div id="layoutSidenav_content">
         <main>
-          <div class="container-fluid px-4">
+          <div class="container-fluid px-4 mt-3">
             <div class="card mb-4">
               <div class="card-header">
-                <i class="fas fa-table me-1"></i>
+                <i class="fa-solid fa-skull-crossbones"></i>
                 신고관리
               </div>
               <div class="card-body">
@@ -171,9 +172,6 @@
     </div>
   </div>
 </div>
-
-    
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
