--- a/main/search.html
+++ b/main/search.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="메인 페이지" />
     <meta name="author" content="이성호" />
-    <title>상품등록조회</title>
+    <title>상품 목록</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/images/emblem.ico" />
 
