--- a/main/notify.html
+++ b/main/notify.html
@@ -19,7 +19,10 @@
   </head>
   <body>
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+      style="position: sticky; top: 0px; z-index: 1"
+    >
       <div class="container px-5 px-lg-5">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
